# wolfgang-lm

./: .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  TODO.md  entrypoint.sh  pyproject.toml
docs/: DATASET_CARD_SYNTHETIC.md  MODEL_CARD_BASE.md  MODEL_CARD_FINETUNED.md  MODEL_CARD_TEMPLATE.md  SPACE_README.md  architecture_deep_dive.md  cloud_training.md  data_sources.md  fine_tuning_preparation.md  inference_generation.md  model_architecture.md  preprocessing.md  synthetic_data.md
web/: app.js  index.html  style.css
wolfgang_lm/: __init__.py
wolfgang_lm/api/: server.py
wolfgang_lm/data/: analyze_finetune_length.py  clean.py  extract_dialogue.py  flatten.py  prepare.py  prepare_finetune.py  setup.py  split_long_conversations.py  synthetic_finetune.py
wolfgang_lm/data/tokenizer/: analyze_tokenizer.py  train_tokenizer.py
wolfgang_lm/inference/: export_to_hf.py  generation.py  verify.py  verify_hf.py  verify_pretrain.py
wolfgang_lm/modeling/: config.py  transformer.py  verify.py
wolfgang_lm/training/: config.py  plot_train_process.py  train.py  train_finetune.py  verify.py  verify_finetune.py
wolfgang_lm/utils/: download_model.py
